--- a/cdn/css/app.css
+++ b/cdn/css/app.css
@@ -2850,6 +2850,61 @@ select.selectpicker {
   font-size: 1.2em;
 }
 
+.main_contact form {
+  padding: 20px;
+  background-color: #fff;
+  margin: 0 auto;
+  margin-top: 40px;
+  border-radius: 5px;
+  width: 600px;
+  max-width: calc(100% - 40px);
+}
+.main_contact form h2 {
+  font-size: 1.2em;
+  margin-bottom: 20px;
+}
+
+.main_contact_types h2 {
+  font-size: 1.4em;
+  color: #666;
+}
+.main_contact_types p {
+  font-size: 0.876em;
+}
+
+.main_property h2 {
+  margin: 40px 0px 20px 0px;
+}
+.main_property .main_property_content_price .main_property_content_price_small {
+  margin-bottom: 0px;
+  font-size: 0.8em;
+}
+.main_property .property_content_structure .property_content_structure_item {
+  padding: 6px 12px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  background-color: #36BA9B;
+  border-radius: 5px;
+  border: 1px solid #2d9a81;
+  color: #fff;
+}
+.main_property .main_property_contact {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  overflow: hidden;
+}
+.main_property .main_property_contact h2 {
+  font-size: 1.2em;
+  padding: 20px;
+  margin: 0px;
+}
+.main_property .main_property_contact form {
+  padding: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #CCC;
+}
+
 .img-responsive-16by9 {
   display: block;
   height: 0;
@@ -2907,6 +2962,10 @@ select.selectpicker {
 }
 .main_optin button {
   width: 100%;
+}
+
+.carousel-item img {
+  height: 450px;
 }
 
 /*# sourceMappingURL=app.css.map */
